[gd_scene load_steps=6 format=3 uid="uid://j00supuj8eru"]

[ext_resource type="Script" path="res://05/test_05.gd" id="1_efnb8"]
[ext_resource type="TileSet" uid="uid://cxrme7hvve71g" path="res://05/Resources/test_05_building_tile_set.tres" id="2_esw52"]
[ext_resource type="PackedScene" uid="uid://chhe4qfstpub6" path="res://05/test_05_grid_tile_manager.tscn" id="2_iwaqo"]
[ext_resource type="PackedScene" uid="uid://bexjm61mrmhk7" path="res://05/test_05_base_building.tscn" id="3_5pvr2"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_vfqdd"]
size = Vector2(32, 32)

[node name="test_05" type="Node2D"]
script = ExtResource("1_efnb8")

[node name="test_05_grid_tile_manager" parent="." node_paths=PackedStringArray("_base_tile_map") instance=ExtResource("2_iwaqo")]
_base_tile_map = NodePath("../BaseTileMap")

[node name="BaseTileMap" type="TileMap" parent="."]
tile_set = ExtResource("2_esw52")
format = 2
layer_0/tile_data = PackedInt32Array(589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 655383, 0, 0, 655384, 0, 0, 655385, 0, 0, 655386, 0, 0, 655387, 0, 0, 655388, 0, 0, 655389, 0, 0, 655390, 0, 0, 655391, 0, 0, 720928, 0, 0, 720929, 0, 0, 720930, 0, 0, 720931, 0, 0, 786468, 0, 0, 786469, 0, 0, 655376, 0, 0, 720912, 0, 0, 786448, 0, 0, 655377, 0, 0, 720913, 0, 0, 786449, 0, 0, 655378, 0, 0, 720914, 0, 0, 786450, 0, 0, 655379, 0, 0, 720915, 0, 0, 786451, 0, 0, 655380, 0, 0, 720916, 0, 0, 786452, 0, 0, 655381, 0, 0, 720917, 0, 0, 786453, 0, 0, 655382, 0, 0, 720918, 0, 0, 786454, 0, 0, 589847, 0, 0, 720919, 0, 0, 786455, 0, 0, 589848, 0, 0, 720920, 0, 0, 786456, 0, 0, 589849, 0, 0, 720921, 0, 0, 786457, 0, 0, 589850, 0, 0, 720922, 0, 0, 786458, 0, 0, 589851, 0, 0, 720923, 0, 0, 786459, 0, 0, 589852, 0, 0, 720924, 0, 0, 786460, 0, 0, 589853, 0, 0, 720925, 0, 0, 786461, 0, 0, 589854, 0, 0, 720926, 0, 0, 786462, 0, 0, 589855, 0, 0, 720927, 0, 0, 786463, 0, 0, 589856, 0, 0, 655392, 0, 0, 786464, 0, 0, 589857, 0, 0, 655393, 0, 0, 786465, 0, 0, 589858, 0, 0, 655394, 0, 0, 786466, 0, 0, 589859, 0, 0, 655395, 0, 0, 786467, 0, 0, 589860, 0, 0, 655396, 0, 0, 720932, 0, 0, 589861, 0, 0, 655397, 0, 0, 720933, 0, 0, 589862, 0, 0, 655398, 0, 0, 720934, 0, 0, 786470, 0, 0, 851996, 0, 0, 852000, 0, 0, 851999, 0, 0, 851998, 0, 0, 851997, 0, 0, 917534, 0, 0, 917535, 0, 0, 917536, 0, 0, 852001, 0, 0, 851995, 0, 0, 851994, 0, 0, 851993, 0, 0)
layer_1/name = "highlight"
layer_1/tile_data = PackedInt32Array(851994, 0, 0, 851995, 0, 0, 786460, 0, 0, 786461, 0, 0, 720926, 0, 0, 655389, 0, 0, 655388, 0, 0, 655387, 0, 0, 655386, 0, 0, 720922, 0, 0, 786458, 0, 0, 786459, 0, 0, 851996, 0, 0, 851997, 0, 0, 851998, 0, 0, 786463, 0, 0, 786462, 0, 0, 720925, 0, 0, 720924, 0, 0, 720923, 0, 0, 589850, 0, 0, 589851, 0, 0, 589852, 0, 0, 589853, 0, 0, 589854, 0, 0, 589855, 0, 0, 589856, 0, 0, 655390, 0, 0, 655391, 0, 0, 655392, 0, 0, 720927, 0, 0, 786464, 0, 0, 852000, 0, 0, 851999, 0, 0, 720928, 0, 0)

[node name="test_05_base_building" parent="." instance=ExtResource("3_5pvr2")]
position = Vector2(672, 320)

[node name="Cursor" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.501961)
self_modulate = Color(1, 1, 1, 0.501961)
texture = SubResource("PlaceholderTexture2D_vfqdd")
centered = false

[node name="Button" type="Button" parent="."]
offset_left = 888.0
offset_top = 656.0
offset_right = 1053.0
offset_bottom = 752.0
theme_override_font_sizes/font_size = 64
toggle_mode = true
text = "build"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
